<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"

    >

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/midnightBlue"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logobarber1" />

        <EditText
            android:id="@+id/editNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/nome"
            android:maxLines="1"
            android:padding="15dp" />

        <EditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/Senha"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:padding="15dp" />

        <Button
            android:id="@+id/btnLogar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/alizarin"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="15dp"
            tools:ignore="InvalidId" />


    </LinearLayout>
</ScrollView>